name:                adaboost
version:             0.1.0.0
synopsis:            Adaptive Boosting (AdaBoost) implementations
homepage:            https://github.com/Noeda/adaboost.git
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.AdaBoost
  ghc-options:         -Wall
  build-depends:       async        >=2.0
                      ,base         >=4.7
                      ,containers   >=0.5
                      ,transformers >=0.3
                      ,vector       >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite adaboost-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adaboost
                      ,base
                      ,test-framework             >=0.8
                      ,test-framework-quickcheck2 >=0.3
                      ,transformers               >=0.3
                      ,QuickCheck                 >=2.7.6
  hs-source-dirs:      tests
  default-language:    Haskell2010

